--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,25 @@
 
   <title>diary_app</title>
   <link rel="manifest" href="manifest.json">
+  <script type="module">
+    // Import the functions you need from the SDKs you need
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.14.0/firebase-app.js";
+    // TODO: Add SDKs for Firebase products that you want to use
+    // https://firebase.google.com/docs/web/setup#available-libraries
+  
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "AIzaSyA8CddWNFvy8GzE63Sy4OwuX4cBiIcX5wo",
+      authDomain: "dialy-journal-app-project.firebaseapp.com",
+      projectId: "dialy-journal-app-project",
+      storageBucket: "dialy-journal-app-project.appspot.com",
+      messagingSenderId: "467235190090",
+      appId: "1:467235190090:web:55051096b132a5eb753db3"
+    };
+  
+    // Initialize Firebase
+    const app = initializeApp(firebaseConfig);
+  </script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
